# security-policy-attack-path-analysis

./: .bandit  .env.example  .pre-commit-config.yaml  API_DOCUMENTATION.md  ARXIV_SUBMISSION_CHECKLIST.md  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  IMPLEMENTATION_CHECKLIST.md  IMPROVEMENT_ROADMAP.md  LICENSE  NEXT_STEPS.md  PHASE_1_COMPLETION_REPORT.md  PHASE_2_COMPLETION_REPORT.md  PHASE_2_SUMMARY.md  PHASE_3_2_COMPLETION.md  PHASE_3_3_COMPLETION.md  PROJECT_STATUS.md  README.md  RESEARCH_PAPER.md  RESEARCH_PUBLICATION.md  assumptions.md  docker-compose.yml  limitations.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
data/: assets.json
data/firewall_rules/: rules.csv
data/iam_policies/: policy_1.json  policy_2.json
docker/: prometheus.yml
docs/: dashboard.html  index.md
docs/api/: README.md
docs/architecture/: README.md
docs/guides/: DEPLOYMENT.md
examples/: basic_usage.py
scripts/: init_db.py
src/: api.py  cloud_parsers.py  database.py  visualization.py
src/analysis/: condition_evaluator.py  find_paths.py
src/graph/: build_graph.py
src/multi_cloud/: azure_parser.py  compare.py  gcp_parser.py
src/threat_scoring/: __init__.py  cvss_calculator.py  nvd_integration.py  threat_scorer.py
src/verification/: __init__.py  z3_verifier.py
tests/: conftest.py  test_api.py  test_build_graph.py  test_condition_evaluator.py  test_find_paths.py  test_multi_cloud.py  test_performance.py  test_threat_scoring.py  test_z3_verifier.py
