[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "security-policy-attack-path-analysis"
version = "1.0.0"
description = "A framework for analyzing security policy conflicts and attack paths with semantic correctness."
authors = [
    {name = "Indraneeli Vardhan", email = "your.email@example.com"},
]
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.8"
dependencies = [
    "networkx",
    "pytest",
    "plotly",
    "numpy",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
]

[project.scripts]
attack-path-analyzer = "src.analysis.find_paths:main_cli"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "pytest-cov>=4.0",
    "black>=23.0",
    "isort>=5.0",
    "ruff>=0.1",
    "mypy>=1.0",
    "bandit[toml]>=1.7",
    "detect-secrets>=1.4",
    "pre-commit>=3.0",
    "flake8>=6.0",
    "safety>=2.0",
]